Refactor code and add better exception handling